--- a/index.html
+++ b/index.html
@@ -3,48 +3,30 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
     <title>Comp4021-assignment1 by eddiepf</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/eddiepf/COMP4021-Assignment1">View on GitHub</a>
-    <div class="shell">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Comp4021-assignment1</h1>
-            <h2>Dynamic SVG Game</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+    <header>
+      <div class="container">
+        <h1>Comp4021-assignment1</h1>
+        <h2>Dynamic SVG Game</h2>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/eddiepf/COMP4021-Assignment1/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/eddiepf/COMP4021-Assignment1/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
+        <section id="downloads">
+          <a href="https://github.com/eddiepf/COMP4021-Assignment1/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/eddiepf/COMP4021-Assignment1/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/eddiepf/COMP4021-Assignment1" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-
-      <span class="banner-fix"></span>
-
-
+    <div class="container">
       <section id="main_content">
         <h1>
 <a id="comp4021-assignment1" class="anchor" href="#comp4021-assignment1" aria-hidden="true"><span class="octicon octicon-link"></span></a>COMP4021-Assignment1</h1>
@@ -75,19 +57,6 @@
 <li>c – cheat mode on/off</li>
 </ul>
       </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/eddiepf">eddiepf</a> can be found on <a href="https://github.com/eddiepf/COMP4021-Assignment1">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
-
     </div>
 
     
