Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 <li>space – shoot</li>
 <li>c – cheat mode on/off</li>
 </ul>
+
+<p><a href="http://eddiepf.github.io/COMP4021-Assignment1/game.html">PLAY NOW!</a></p>
       </section>
     </div>
 
